# HistoSeg

./: .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/tutorials/: pattern1_isoline.ipynb
docs/workflows/: index.md
src/histoseg/: __init__.py  _version.py
src/histoseg/contours/: pattern1_isoline.py
src/histoseg/geometry/: __init__.py  tissue_boundary.py
workflows/: contour_generation_pattern1.py
