[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histoseg"              # PyPI 上的名字：必须唯一，全小写更稳
version = "0.1.0"              # 每次发新版都要涨
description = "..."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [{name="Taobo Hu", email="taobo.hu@scilifelab.se"}]
dependencies = [
  # 你的运行依赖（不要把 docs 依赖放这里）
]

[project.urls]
Homepage = "https://github.com/hutaobo/HistoSeg"
Documentation = "https://histoseg.readthedocs.io"
